--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Simple BeatBox Tracker">
+    <meta name="description" content="I'm a simple BeatBox Tracker">
     <meta name="author" content="Ey Pacha!">
 
     <title>BBX Tracker v0.1</title>
@@ -15,6 +15,14 @@
 	<link href="img/logo16.png" type="image/png" rel="icon" sizes="16x16"/>
 	<link href="img/logo32.png" type="image/png" rel="icon" sizes="32x32"/>
 	<link href="img/logo48.png" type="image/png" rel="icon" sizes="48x48"/>
+	
+	<meta property="og:locale" content="en_EN" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="BBX Tracker v.01"/>
+	<meta property="og:description" content="I'm a simple BeatBox Tracker" />
+	<meta property="og:url" content="http://eypacha.com" />
+	<meta property="og:site_name" content="Ey Pacha!" />
+	<meta property="og:image" content="img/ogg_preview.png" />
 	
 </head>
 
