--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<meta property="og:description" content="I'm a simple BeatBox Tracker" />
 	<meta property="og:url" content="http://eypacha.com" />
 	<meta property="og:site_name" content="Ey Pacha!" />
-	<meta property="og:image" content="img/ogg_preview.png" />
+	<meta property="og:image" content="https://eypacha.github.io/bbx-tracker/img/ogg_preview.png" />
 	
 </head>
 
