--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 <body>
-	<h3><i class="fa fa-bullhorn"></i> BBX TRACKER 0.1 by <a href="http://eypacha.com" target="_blank"> Ey Pacha!</a><a href="http://eypacha.com/bbx-tracker" target="_blank"><i class="fa fa-github fa-fw" aria-hidden="true" title="Github"></i>In GitHub</a></h3>
+	<h3><i class="fa fa-bullhorn"></i> BBX TRACKER 0.1 by <a href="http://eypacha.com" target="_blank"> Ey Pacha!</a><a href="github.com/eypacha/bbx-tracker" target="_blank"><i class="fa fa-github fa-fw" aria-hidden="true" title="On GitHub"></i>On GitHub</a></h3>
 <div id="playbar" class="noselect">
 	<button id="playBtn">
 		<i class="fa fa-play fa-fw fa-lg" aria-hidden="true" title="Play"></i>
