--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="BBX Tracker v.01"/>
 	<meta property="og:description" content="I'm a simple BeatBox Tracker" />
-	<meta property="og:url" content="http://eypacha.com" />
-	<meta property="og:site_name" content="Ey Pacha!" />
-	<meta property="og:image" content="https://eypacha.github.io/bbx-tracker/img/ogg_preview.png" />
+	<meta property="og:url" content="https://eypacha.github.io/bbx-tracker/" />
+	<meta property="og:site_name" content="BBX Tracker v.01" />
+	<meta property="og:image" content="https://eypacha.github.io/bbx-tracker/img/ogg_preview.jpg" />
 	
 </head>
 
