--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ BB c1 ts c2 Pf -- ts B- BB -- ts Pf -- ts B- B-
 BB c1 ts c2 Pf ^m ts -- BB -- ts Pf -- ts B- B-
 BB c1 ts c2 Pf ^m ts B- BB ^K ts -- ^K ts c3 ^K</textarea>
 </div>
-<textarea id="tracker" type="text" disabled>
+<textarea id="sound-codes" type="text" disabled>
 SOUND CODES
 B- = Kick
 BB = Long Kick
