--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 <body>
-	<h3><i class="fa fa-bullhorn"></i> BBX TRACKER 0.1 by <a href="http://eypacha.com" target="_blank"> Ey Pacha!</a><a href="http://github.com/eypacha/bbx-tracker" target="_blank"><i class="fa fa-github fa-fw" aria-hidden="true" title="On GitHub"></i>On GitHub</a></h3>
+	<h3><i class="fa fa-bullhorn"></i> BBX TRACKER! 0.1 by <a href="http://eypacha.com" target="_blank"> Ey Pacha!</a><a href="http://github.com/eypacha/bbx-tracker" target="_blank"><i class="fa fa-github fa-fw" aria-hidden="true" title="On GitHub"></i>On GitHub</a></h3>
 <div id="playbar" class="noselect">
 	<button id="playBtn">
 		<i class="fa fa-play fa-fw fa-lg" aria-hidden="true" title="Play"></i>
@@ -68,23 +68,40 @@
 </div>
 
 <div>
-	<textarea id="tracker" type="text">BB -- -- -- Pf -- -- -- BB -- -- Pf -- -- B- B-
-BB -- -- -- Pf -- -- B- BB -- -- Pf -- -- B- B-
-BB -- ts -- Pf -- ts -- BB -- ts Pf -- ts B- B-
+	<textarea id="tracker" type="text" maxlength="200">BB -- -- -- Pf -- -- B- BB -- -- Pf -- -- B- B-
 BB -- ts -- Pf -- ts B- BB -- ts Pf -- ts B- B-
-BB c3 ts c2 Pf -- ts -- BB -- ts Pf -- -- B- B-
-BB c3 ts c2 Pf -- ts B- BB -- ts Pf -- ts B- B-
 BB c3 ts c2 Pf ^m ts -- BB -- ts Pf -- ts B- B-
-BB c3 ts c2 Pf ^m ts B- BB ^K ts -- ^K ts c3 ^K</textarea>
+BB c3 ts c2 Pf ^m ts B- BB ^K ts -- ^K c1 c3 ^K</textarea>
 </div> 
-<textarea id="sound-codes" type="text" disabled>
-SOUND CODES
-B- = Kick
-BB = Long Kick
-Pf = Snare
-^K = Inward snare
-c1, c2, c3 = Tonge clicks
-^m = Lip scratch</textarea>
+<div class="container">
+	<textarea id="sound-codes" type="text" disabled>
+	>> SOUND CODES
+
+	B- = Kick
+	BB = Long Kick
+	Pf = Snare
+	^K = Inward snare
+	c1, c2, c3 = Tonge clicks
+	^m = Lip scratch</textarea>
+	<div id="pacha">
+		<div></div>
+	</div>
+</div>
+<div id="share-box">
+	<button id="shareBtn" class="collapse">
+		<i class="fa fa-share-alt"></i> Share this beat!
+	</button>
+	<div></div>
+</div>
+<div id="shareIt" class="collapse">
+	<a href="#" id="fbShare" target="_blank"><i class="fa fa-facebook-square"></i>Facebook</a>
+	<a href="#" id="twShare" target="_blank"><i class="fa fa-twitter-square"></i>Twitter</a>
+	<a href="#" id="btEmail" target="_blank"><i class="fa fa-envelope"></i>Email</a><br>
+	<small>or copy this url:</small><input id="shortlink" type="text" value="">
+</div>
+<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook.com%2Feypacha&width=440&layout=standard&action=like&size=large&show_faces=true&share=false&height=80&appId=357514884387882" width="440" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+
+<script src="js/lz-string.js"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/howler.min.js"></script>
 <script src="js/main.js"></script>
