ahora en español

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <body>
 	<h3><i class="fa fa-bullhorn"></i> BBX TRACKER! 0.1 by <a href="http://eypacha.com" target="_blank"> Ey Pacha!</a><a href="http://github.com/eypacha/bbx-tracker" target="_blank"><i class="fa fa-github fa-fw" aria-hidden="true" title="On GitHub"></i>On GitHub</a></h3>
+	<div class="subtitle">Hacé bitbó y ponele cumbia a tu día...</div>
 <div id="playbar" class="noselect">
 	<button id="playBtn">
 		<i class="fa fa-play fa-fw fa-lg" aria-hidden="true" title="Play"></i>
@@ -89,7 +90,7 @@ BB c3 ts c2 Pf ^m ts B- BB ^K ts -- ^K c1 c3 ^K</textarea>
 </div>
 <div id="share-box">
 	<button id="shareBtn" class="collapse">
-		<i class="fa fa-share-alt"></i> Share this beat!
+		<i class="fa fa-share-alt"></i> Compartí este beat!
 	</button>
 	<div></div>
 </div>
