--- a/index.html
+++ b/index.html
@@ -75,15 +75,18 @@ BB c3 ts c2 Pf ^m ts -- BB -- ts Pf -- ts B- B-
 BB c3 ts c2 Pf ^m ts B- BB ^K ts -- ^K c1 c3 ^K</textarea>
 </div> 
 <div class="container">
-	<textarea id="sound-codes" type="text" disabled>
-	>> SOUND CODES
 
-	B- = Kick
-	BB = Long Kick
-	Pf = Snare
-	^K = Inward snare
-	c1, c2, c3 = Tonge clicks
-	^m = Lip scratch</textarea>
+	<i class="fa fa-pencil" aria-hidden="true"></i>	ARMA TU RITMO EN EL CUADRO DE ARRIBA<br>UTILIZANDO LOS SIGUIENTES CÓDIGOS
+
+	<textarea id="sound-codes" type="text" disabled>
+	B- = Bombo
+	BB = Bombo largo
+	ts = Hi-hat
+	Pf = Redoblante
+	^K = Redoblante aspirado
+	^m = Scratch de labios
+	c1, c2, c3 = Clicks de lengua
+	-- = Silencio</textarea>
 	<div id="pacha">
 		<div></div>
 	</div>
@@ -95,9 +98,9 @@ BB c3 ts c2 Pf ^m ts B- BB ^K ts -- ^K c1 c3 ^K</textarea>
 	<div></div>
 </div>
 <div id="shareIt" class="collapse">
-	<a href="#" id="fbShare" target="_blank"><i class="fa fa-facebook-square"></i>Facebook</a>
-	<a href="#" id="twShare" target="_blank"><i class="fa fa-twitter-square"></i>Twitter</a>
-	<a href="#" id="btEmail" target="_blank"><i class="fa fa-envelope"></i>Email</a><br>
+	<a href="#" id="fbShare" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>Facebook</a>
+	<a href="#" id="twShare" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i>Twitter</a>
+	<a href="#" id="btEmail" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>Email</a><br>
 	<small>or copy this url:</small><input id="shortlink" type="text" value="">
 </div>
 <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook.com%2Feypacha&width=440&layout=standard&action=like&size=large&show_faces=true&share=false&height=80&appId=357514884387882" width="440" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
