btpm y steps compartibles

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@ BB c3 ts c2 Pf ^m ts B- BB ^K ts -- ^K c1 c3 ^K</textarea>
 	</button>
 	<div></div>
 </div>
+<div id="waitingBox" class="collapse">
+		<i class="fa fa-spinner fa-pulse fa-fw"></i> Creando link...
+	<div></div>
+</div>
 <div id="shareIt" class="collapse">
 	<a href="#" id="fbShare" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>Facebook</a>
 	<a href="#" id="twShare" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i>Twitter</a>
