copia esta url en español

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ BB c3 ts c2 Pf ^m ts B- BB ^K ts -- ^K c1 c3 ^K</textarea>
 	<a href="#" id="fbShare" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>Facebook</a>
 	<a href="#" id="twShare" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i>Twitter</a>
 	<a href="#" id="btEmail" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>Email</a><br>
-	<small>or copy this url:</small><input id="shortlink" type="text" value="">
+	<small>o copia esta url:</small><input id="shortlink" type="text" value="">
 </div>
 <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook.com%2Feypacha&width=440&layout=standard&action=like&size=large&show_faces=true&share=false&height=80&appId=357514884387882" width="440" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
