nuevos sonidos y demo

--- a/index.html
+++ b/index.html
@@ -69,36 +69,35 @@
 </div>
 
 <div>
-	<textarea id="tracker" type="text" maxlength="200">BB -- -- -- Pf -- -- B- BB -- -- Pf -- -- B- B-
-BB -- ts -- Pf -- ts B- BB -- ts Pf -- ts B- B-
-BB c3 ts c2 Pf ^m ts -- BB -- ts Pf -- ts B- B-
-BB c3 ts c2 Pf ^m ts B- BB ^K ts -- ^K c1 c3 ^K</textarea>
+	<textarea id="tracker" type="text" maxlength="200"></textarea>
 </div> 
 <div class="container">
 
-	<i class="fa fa-pencil" aria-hidden="true"></i>	ARMA TU RITMO EN EL CUADRO DE ARRIBA<br>UTILIZANDO LOS SIGUIENTES CÓDIGOS
-
+	<i class="fa fa-pencil" aria-hidden="true"></i>	ARMA TU RITMO EN EL CUADRO DE ARRIBA<br>UTILIZANDO LOS SIGUIENTES CÓDIGOS<br>
+	<small><a id="demoLink" href="#"><i class="fa fa-music fa-fw" aria-hidden="true"></i>[DEMO BEAT]</a> <i class="fa fa-list fa-fw" aria-hidden="true"></i><a href="https://github.com/eypacha/bbx-tracker#lista-de-sonidos" target="_blank">[lista completa]</a></small>
 	<textarea id="sound-codes" type="text" disabled>
+	-- = Silencio
 	B- = Bombo
 	BB = Bombo largo
 	ts = Hi-hat
 	Pf = Redoblante
 	^K = Redoblante aspirado
-	^m = Scratch de labios
 	c1, c2, c3 = Clicks de lengua
-	-- = Silencio</textarea>
+	^m = Scratch de labios
+	</textarea>
 	<div id="pacha">
 		<div></div>
 	</div>
 </div>
+
 <div id="share-box">
 	<button id="shareBtn" class="collapse">
-		<i class="fa fa-share-alt"></i> Compartí este beat!
+		<i class="fa fa-share-alt" aria-hidden="true"></i> Compartí este beat!
 	</button>
 	<div></div>
 </div>
 <div id="waitingBox" class="collapse">
-		<i class="fa fa-spinner fa-pulse fa-fw"></i> Creando link...
+		<i class="fa fa-spinner fa-pulse fa-fw" aria-hidden="true"></i> Creando link...
 	<div></div>
 </div>
 <div id="shareIt" class="collapse">
