ajuste de bpm/steps

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </div>
 
 <div>
-	<textarea id="tracker" type="text" maxlength="200"></textarea>
+	<textarea id="tracker" type="text" maxlength="200">B- ts Pf ts B- ts Pf B- </textarea>
 </div> 
 <div class="container">
 
