demobeat como link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="container">
 
 	<i class="fa fa-pencil" aria-hidden="true"></i>	ARMA TU RITMO EN EL CUADRO DE ARRIBA<br>UTILIZANDO LOS SIGUIENTES CÓDIGOS<br>
-	<small><a id="demoLink" href="#"><i class="fa fa-music fa-fw" aria-hidden="true"></i>[DEMO BEAT]</a> <i class="fa fa-list fa-fw" aria-hidden="true"></i><a href="https://github.com/eypacha/bbx-tracker#lista-de-sonidos" target="_blank">[lista completa]</a></small>
+	<small><a href="http://bit.ly/2q7OzY3"><i class="fa fa-music fa-fw" aria-hidden="true"></i>[DEMO BEAT]</a> <i class="fa fa-list fa-fw" aria-hidden="true"></i><a href="https://github.com/eypacha/bbx-tracker#lista-de-sonidos" target="_blank">[lista completa]</a></small>
 	<textarea id="sound-codes" type="text" disabled>
 	-- = Silencio
 	B- = Bombo
