adaptación al SBN

--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
 </div>
 
 <div>
-	<textarea id="tracker" type="text" maxlength="200">B- ts Pf ts B- ts Pf B- </textarea>
+	<textarea id="tracker" type="text" maxlength="200">B t Pf t B t Pf B</textarea>
 </div> 
 <div class="container">
 
 	<i class="fa fa-pencil" aria-hidden="true"></i>	ARMA TU RITMO EN EL CUADRO DE ARRIBA<br>UTILIZANDO LOS SIGUIENTES CÓDIGOS<br>
-	<small><a href="http://bit.ly/2q7OzY3"><i class="fa fa-music fa-fw" aria-hidden="true"></i>[DEMO BEAT]</a> <i class="fa fa-list fa-fw" aria-hidden="true"></i><a href="https://github.com/eypacha/bbx-tracker#lista-de-sonidos" target="_blank">[lista completa]</a></small>
+	<small><a href="http://bit.ly/2qd5LLH"><i class="fa fa-music fa-fw" aria-hidden="true"></i>[DEMO BEAT]</a> <i class="fa fa-list fa-fw" aria-hidden="true"></i><a href="https://github.com/eypacha/bbx-tracker#lista-de-sonidos" target="_blank">[lista completa de sonidos]</a></small>
 	<textarea id="sound-codes" type="text" disabled>
-	-- = Silencio
-	B- = Bombo
+	- = Silencio
+	B = Bombo
 	BB = Bombo largo
-	ts = Hi-hat
+	t = Hi-hat
 	Pf = Redoblante
 	^K = Redoblante aspirado
-	c1, c2, c3 = Clicks de lengua
+	c = Click de lengua
 	^m = Scratch de labios
 	</textarea>
 	<div id="pacha">
