--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 	BB = Bombo largo
 	t = Hi-hat
 	Pf = Redoblante
-	^K = Redoblante aspirado
+	K = Redoblante aspirado
 	c = Click de lengua
-	^m = Scratch de labios
+	m = Scratch de labios
 	</textarea>
 	<div id="pacha">
 		<div></div>
@@ -111,7 +111,7 @@
 <script src="js/lz-string.js"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/howler.min.js"></script>
-<script src="js/main.js"></script>
+<script src="js/main.js?v=2"></script>
 
 </body>
 </html>
