--- a/index.html
+++ b/index.html
@@ -107,7 +107,15 @@
 	<small>o copia esta url:</small><input id="shortlink" type="text" value="">
 </div>
 <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook.com%2Feypacha&width=440&layout=standard&action=like&size=large&show_faces=true&share=false&height=80&appId=357514884387882" width="440" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-
+ <div>
+        <a href="https://github.com/eypacha" target="_blank"><i class="fa fa-2x fa-github-square"></i></a>
+        <a href="https://www.facebook.com/eypacha" target="_blank"><i class="fa fa-2x fa-facebook-square"></i></a>
+        <a href="https://www.instagram.com/eypacha" target="_blank"><i class="fa fa-2x fa-instagram"></i></a>
+        <a href="https://www.vk.com/eypacha" target="_blank"><i class="fa fa-2x fa-vk"></i></a>
+        <a href="https://www.youtube.com/c/eypacha" target="_blank"><i class="fa fa-2x fa-youtube-square"></i></a>
+        <a href="https://www.vimeo.com/eypacha" target="_blank"><i class="fa fa-2x fa-vimeo-square"></i></a>
+        <a href="https://www.twitter.com/eypacha" target="_blank"><i class="fa fa-2x fa-twitter-square"></i></a>
+    </div>
 <script src="js/lz-string.js"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/howler.min.js"></script>
