--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I'm a simple BeatBox Tracker">
+    <meta name="description" content="I'm a simple BeatBox Sekuencer">
     <meta name="author" content="Ey Pacha!">
 
-    <title>BBX Tracker v0.1</title>
+    <title>BBX Sekuencer v0.1</title>
 	
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -19,8 +19,8 @@
 	<meta property="og:locale" content="en_EN" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="BBX Tracker v.01"/>
-	<meta property="og:description" content="I'm a simple BeatBox Tracker" />
-	<meta property="og:url" content="https://eypacha.github.io/bbx-tracker/" />
+	<meta property="og:description" content="I'm a simple BeatBox Sekuencer" />
+	<meta property="og:url" content="https://eypacha.github.io/bbx-sekuencer/" />
 	<meta property="og:site_name" content="BBX Tracker v.01" />
 	<meta property="og:image" content="https://eypacha.github.io/bbx-tracker/img/ogg_preview.jpg" />
 	
