fix: better margins

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
 
 <div id="share-box">
-	<button id="shareBtn" class="collapse">
+	<button id="shareBtn" class="">
 		<i class="fa fa-share-alt" aria-hidden="true"></i> Compartí este beat!
 	</button>
 	<div></div>
