fix: better margins (and a new instruction

--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
 <div id="shareIt" class="collapse">
 	<a href="#" id="fbShare" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>Facebook</a>
 	<a href="#" id="twShare" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i>Twitter</a>
-	<a href="#" id="btEmail" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>Email</a><br>
-	<small>o copia esta url:</small><input id="shortlink" type="text" value="">
+	<a href="#" id="btEmail" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i>Email</a>
+	<div style="margin-top: 7px"><small>o copia esta url:</small><input id="shortlink" type="text" value=""><br>
+  <small>(o copiá y pegá la url de esta página)</small></div>
 </div>
 
  <div>
