--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
   <small>(o copiá y pegá la url de esta página)</small></div>
 </div>
 
- <div>
-        <a href="https://github.com/eypacha" target="_blank"><i class="fa fa-2x fa-github-square"></i></a>
-        <a href="https://www.facebook.com/eypacha" target="_blank"><i class="fa fa-2x fa-facebook-square"></i></a>
-        <a href="https://www.instagram.com/eypacha" target="_blank"><i class="fa fa-2x fa-instagram"></i></a>
-        <a href="https://www.vk.com/eypacha" target="_blank"><i class="fa fa-2x fa-vk"></i></a>
-        <a href="https://www.youtube.com/c/eypacha" target="_blank"><i class="fa fa-2x fa-youtube-square"></i></a>
-        <a href="https://www.vimeo.com/eypacha" target="_blank"><i class="fa fa-2x fa-vimeo-square"></i></a>
-        <a href="https://www.twitter.com/eypacha" target="_blank"><i class="fa fa-2x fa-twitter-square"></i></a>
+ <div style="position: absolute; bottom: 0px;right: 3px;font-size: 21px">
+        <a href="https://github.com/eypacha" target="_blank"><i class="fa fa-github-square"></i></a>
+        <a href="https://facebook.com/eypacha" target="_blank"><i class="fa fa-facebook-square"></i></a>
+        <a href="https://instagram.com/eypacha" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a href="https://vk.com/eypacha" target="_blank"><i class="fa fa-vk"></i></a>
+        <a href="https://youtube.com/c/eypacha" target="_blank"><i class="fa fa-youtube-square"></i></a>
+        <a href="https://vimeo.com/eypacha" target="_blank"><i class="fa fa-vimeo-square"></i></a>
+        <a href="https://twitter.com/eypacha" target="_blank"><i class="fa fa-twitter-square"></i></a>
     </div>
 <script src="js/lz-string.js"></script>
 <script src="js/jquery-3.2.1.min.js"></script>
